--- a/html/discographie.html
+++ b/html/discographie.html
@@ -29,14 +29,15 @@
 		<div class="main">
 			<h1 role="heading" aria-level="1" class="main__title">Discographie</h1>
 		</div>
-		<div class="mainDisco__video">
-			<iframe width="800" height="500" src="https://www.youtube.com/embed/MNtScUEs8A4?list=RDMNtScUEs8A4" frameborder="0" allowfullscreen class="mainDisco__player"></iframe>
+		<div class="mainDisco__video ">
+			<iframe width="800" height="500" src="https://www.youtube.com/embed/MNtScUEs8A4?list=RDMNtScUEs8A4" frameborder="0" allowfullscreen class="mainDisco__player superembed-force"></iframe>
 		</div>
 			<div class="mainDisco__single">      <!-- SINGLE-->
 				<h3 role="heading" class="single__title" aria-level="3"><span class="single__title-posi">Single</span></h3>
 				<ul class="single__list">
-					<li class="single__elt"><img class="single__poch" src="../img/knewlove.jpg" alt="pochette cd" title=" Never Knew Love (Hardwell & Greatski)" width="170" height="170"></li>
-					<li class="single__elt"><img class="single__poch" src="../img/rehab.jpg" alt="" title="Mrkrstft (Hardwell Presents R3HAB)" width="170" height="170"></li>
+					<a href="www.google.be" title="" class="single__link">
+						<li class="single__elt"><img class="single__poch" src="../img/rehab.jpg" alt="" title="Mrkrstft (Hardwell Presents R3HAB)" width="170" height="170"></li>
+					</a>
 					<li class="single__elt"><img class="single__poch" src="../img/twoloud.jpg" alt="" title="Zero 76(avec Tiësto)" width="170" height="170"></li>
 					<li class="single__elt"><img class="single__poch" src="../img/cobrajpg.jpg" alt="" title="Cobra" width="170" height="170"></li>
 					<li class="single__elt"><img class="single__poch" src="../img/spaceman.jpg" alt="" title="Call Me A Spaceman (avec Mitch Crown)" width="170" height="170"></li>
@@ -72,5 +73,11 @@
 			</ul>
 		
 	</footer>
+	<script type="text/javascript" src="../js/script.js"></script>
 </body>
+
 </html>
+
+<!-- SIngle video 
+	 Au clic sur la class un tel, le href devient X 
+-->
