--- a/html/index.html
+++ b/html/index.html
@@ -66,13 +66,14 @@
 	<footer class="footer"> 
 			<ul class="footer__list footer__accueil">
 					<!--<a href="" title=""><li class="footer__Elt">Accueil</li></a>-->
-					<li class="footer__elt"><a href="" title="" class="footer__link fb">Facebook</li></a>
+					<li class="footer__elt"><a href="" title="" class=" footer__link fb">Facebook</li></a>
 					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>	
 					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>	
 					<li class="footer__elt"><a href="" title="" class="footer__link twi">Twitter</li></a>
 					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>	
-			</ul>
-		
+			</ul>	
 	</footer>
 </body>
+<script type="text/javascript" src="../js/script.js"></script>
+<script src="../js/superembed.min.js"></script>
 </html>
