add responsive not finish yet

--- a/html/biographie.html
+++ b/html/biographie.html
@@ -5,7 +5,7 @@
 	<meta name="author" content="Christine Jendrzejczyk"/>
     <meta name="description" content="Hardwell (non officiel) de Christine Jendrzejczyk" />
     <meta name="keywords" content="Hardwell, Dj, Christine Jendrzejczyk" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../buildcss/main.css" />
 	<title>Hardwell</title>
 </head>
@@ -15,48 +15,48 @@
 			<input type="checkbox" title="menu" class="menu__check" id="toogle-nav" checked>
 			<label for="toogle-nav" class="menu__drop"></label>
 			<ul class="menu__list">
-					<li class="menu__elt"><a href="index.html"  class="menu__link" title="">Accueil</li></a>
+					<li class="menu__elt"><a href="../index.html"  class="menu__link" title="">Accueil</li></a>
 					<li class="menu__elt active">Biographie</li></a>
-					<li class="menu__elt"><a href="discographie.html" title="Lien vers la discographie de Hardwell" class="menu__link">Discographie</li></a>	
-					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>	
+					<li class="menu__elt"><a href="discographie.html" title="Lien vers la discographie de Hardwell" class="menu__link">Discographie</li></a>
+					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>
 					<li class="menu__elt"><a href="contact.html" title="Lien vers la page de contact de Hardwell" class="menu__link">Contact</li></a>
-					
-					
+
+
 			</ul>
 		</nav>
 	</header>
 	<main class="mainBio">
 		<div class="main">
-			<h1 role="heading" aria-level="1" class="main__title">Discographie</h1>
+			<h1 role="heading" aria-level="1" class="main__title">Biographie</h1>
 		</div>
 		<div class="mainBio__photoG">
 		</div>
 			<div class="mainBio__text">
 				<p class="mainBio__paraD">
 					Hardwell, de son vrai nom Robbert van de Corput, né le 7 janvier 1988 à Bréda, est un disc jockey et producteur de musique house et électronique néerlandais. Classé depuis 2013 meilleur DJ mondial par DJ Magazine, il s'illustre dans les genres house progressive et electro house.
-					Hardwell apprend le piano à 6 ans et manifeste un intérêt certain pour la musique électronique. Dès 14 ans, il mixe dans les clubs les plus réputés des Pays-Bas, alors accompagné par ses parents pour chacune de ses performances puisqu'il n'était pas autorisé à y entrer seul.
+					Hardwell apprend le piano à 6 ans et manifeste un intérêt certain pour la musique électronique. Dès 14 ans, il mixe dans les clubs les plus réputés des Pays-Bas, alors accompagné par ses parents pour chacune de ses performances puisqu'il n'était pas autorisé à y entrer seul. En 2008, il se fait connaître sur la scène internationale avec son titre Show Me Love vs. Be, repris ensuite par les meilleurs DJs.
 				</p>
 			</div>
 		<div class="mainBio__photoD"></div>
 		<div class="mainBio__text">
 			<p class="mainBio__paraG">
-				En 2008, il se fait connaître sur la scène internationale avec son titre Show Me Love vs. Be, repris ensuite par les meilleurs DJs. Il fonde son propre label deux ans plus tard, Revealed Recordings. 2012 est une année très importante pour lui. Il sort son single Spaceman qui devient une référence. En mars, il joue pour la première fois sur la scène principale de l'Ultra Music Festival de Miami, puis joue à Tomorrowland en juillet. Son set, qui atteint 22 millions de vues en 2015 sur YouTube, est considéré par beaucoup comme la meilleure performance EDM de l'année. Il signe une nouvelle collaboration majeure, avec Showtek, How We Do. Il se classe alors 6e au classement DJ Mag..
+				 Il fonde son propre label deux ans plus tard, Revealed Recordings. 2012 est une année très importante pour lui. Il sort son single Spaceman qui devient une référence. En mars, il joue pour la première fois sur la scène principale de l'Ultra Music Festival de Miami, puis joue à Tomorrowland en juillet. Son set, qui atteint 22 millions de vues en 2015 sur YouTube, est considéré par beaucoup comme la meilleure performance EDM de l'année. Il signe une nouvelle collaboration majeure, avec Showtek, How We Do. Il se classe alors 6e au classement DJ Mag..
 				</p>
 				<p class="mainBio__paraG-suite">En avril, il lance sa tournée mondiale I Am Hardwell. Comme l'année précédente, il joue au festival belge Tomorrowland. Une nouvelle fois très attendu, Hardwell se montre à la hauteur des attentes. En octobre 2013, il dépasse Armin van Buuren et devient le meilleur DJ du monde selon le classement DJ Magazine, place qu'il conservera l'année suivante5. Son premier album, United We Are, sort en janvier 2015.
 				</span></p>
 
 		</div>
 	</main>
-	<footer class="footer"> 
+	<footer class="footer">
 			<ul class="footer__list">
 					<!--<a href="" title=""><li class="footer__Elt">Accueil</li></a>-->
 					<li class="footer__elt"><a href="" title="" class="footer__link fb">Facebook</li></a>
-					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>	
-					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>	
+					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>
+					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>
 					<li class="footer__elt"><a href="" title="" class="footer__link twi">Twitter</li></a>
-					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>	
+					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>
 			</ul>
-		
+
 	</footer>
 </body>
 </html>
