--- a/html/discographie.html
+++ b/html/discographie.html
@@ -5,7 +5,7 @@
 	<meta name="author" content="Christine Jendrzejczyk"/>
     <meta name="description" content="Hardwell (non officiel) de Christine Jendrzejczyk" />
     <meta name="keywords" content="Hardwell, Dj, Christine Jendrzejczyk" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../buildcss/main.css" />
 	<title>Hardwell - Discographie</title>
 </head>
@@ -15,13 +15,13 @@
 			<input type="checkbox" title="menu" class="menu__check" id="toogle-nav" checked>
 			<label for="toogle-nav" class="menu__drop"></label>
 			<ul class="menu__list">
-					<li class="menu__elt"><a href="index.html"  class="menu__link" title="">Accueil</li></a>
+					<li class="menu__elt"><a href="../index.html"  class="menu__link" title="">Accueil</li></a>
 					<li class="menu__elt"><a href="biographie.html" title="Lien vers la biographie de Hardwell" class="menu__link">Biographie</li></a>
-					<li class="menu__elt  active">Discographie</li></a>	
-					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>	
+					<li class="menu__elt  active">Discographie</li></a>
+					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>
 					<li class="menu__elt"><a href="contact.html" title="Lien vers la page de contact de Hardwell" class="menu__link">Contact</li></a>
-					
-					
+
+
 			</ul>
 		</nav>
 	</header>
@@ -60,24 +60,24 @@
 					<li class="single__elt"><img class="single__poch" src="../img/offthehook.jpg" alt="" title="Off The Hook (avec Armin van Buuren)" width="170" height="170"></li>
 					<li class="single__elt"><img class="single__poch" src="../img/mad.jpg" alt="" title="Mad World (featuring Jake Reese)" width="170" height="170"></li>
 				</ul>
-			</div> 
+			</div>
 	</main>
-	<footer class="footer"> 
+	<footer class="footer">
 			<ul class="footer__list">
 					<!--<a href="" title=""><li class="footer__Elt">Accueil</li></a>-->
 					<li class="footer__elt"><a href="" title="" class="footer__link fb">Facebook</li></a>
-					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>	
-					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>	
+					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>
+					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>
 					<li class="footer__elt"><a href="" title="" class="footer__link twi">Twitter</li></a>
-					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>	
+					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>
 			</ul>
-		
+
 	</footer>
 	<script type="text/javascript" src="../js/script.js"></script>
 </body>
 
 </html>
 
-<!-- SIngle video 
-	 Au clic sur la class un tel, le href devient X 
+<!-- SIngle video
+	 Au clic sur la class un tel, le href devient X
 -->
