--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta name="author" content="Christine Jendrzejczyk"/>
     <meta name="description" content="Hardwell (non officiel) de Christine Jendrzejczyk" />
     <meta name="keywords" content="Hardwell, Dj, Christine Jendrzejczyk" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">	
-    <link rel="stylesheet" href="../buildcss/main.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="buildcss/main.css" />
 	<title>Hardwell</title>
 </head>
 <body class="accueil">
@@ -16,24 +16,24 @@
 			<label for="toogle-nav" class="menu__drop"></label>
 			<ul class="menu__list">
 					<!--<a href="" title=""><li class="menu__Elt">Accueil</li></a>-->
-					<li class="menu__elt"><a href="biographie.html" title="Lien vers la biographie de Hardwell" class="menu__link">Biographie</li></a>
-					<li class="menu__elt"><a href="discographie.html" title="Lien vers la discographie de Hardwell" class="menu__link">Discographie</li></a>	
-					<li class="menu__elt"><a href="evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>	
-					<li class="menu__elt"><a href="contact.html" title="Lien vers la page de contact de Hardwell" class="menu__link">Contact</li></a>
-					
-					
+					<li class="menu__elt"><a href="html/biographie.html" title="Lien vers la biographie de Hardwell" class="menu__link">Biographie</li></a>
+					<li class="menu__elt"><a href="html/discographie.html" title="Lien vers la discographie de Hardwell" class="menu__link">Discographie</li></a>
+					<li class="menu__elt"><a href="html/evenement.html" title="Lien vers la evenement de Hardwell" class="menu__link">Evenement</li></a>
+					<li class="menu__elt"><a href="html/contact.html" title="Lien vers la page de contact de Hardwell" class="menu__link">Contact</li></a>
+
+
 			</ul>
 		</nav>
 		<div class="mainQuote">
 			<h1 role="heading" aria-level="1" class="mainQuote__title">If you can do it, you can do it</h1>
-		</div>	
+		</div>
 	</header>
 	<main class="mainHome">
 		<div class="mainInfo">
-			<h1 role="heading" aria-level="1" class="hidden">Biographie</h1>	
+			<h1 role="heading" aria-level="1" class="hidden">Biographie</h1>
 			<p>
-				Hardwell, de son vrai nom Robbert van de Corput, né le 7 janvier 1988 à Bréda, est un disc jockey et producteur de musique house et électronique néerlandais. 
-				<a href="biographie.html" title="Lien vers la page biographie d'Hardwell" class="mainInfo__plus">En lire plus</a>
+				Hardwell, de son vrai nom Robbert van de Corput, né le 7 janvier 1988 à Bréda, est un disc jockey et producteur de musique house et électronique néerlandais.
+				<a href="html/biographie.html" title="Lien vers la page biographie d'Hardwell" class="mainInfo__plus">En lire plus</a>
 			</p>
 		</div>
 		<div class="mainEven">
@@ -45,8 +45,8 @@
 				</a>
 				<!--<img src="../img/il.jpg" alt="" title="" width="" height="">-->
 			</div>
-		
-		
+
+
 			<div class="mainEven__D">
 				<a href="" title="Lien vers l'évenement">
 				<h2 role="heading" aria-level="1" class="mainEvenD__title">Pompadou Festival</h2>
@@ -54,7 +54,7 @@
 				</a>
 				<!--<img src="../img/il.jpg" alt="" title="" width="" height="">-->
 			</div>
-	
+
 		</div>
 		<span class="test">
 		<div class="mainMusic">
@@ -63,15 +63,15 @@
 		</div>
 		</span>
 	</main>
-	<footer class="footer"> 
+	<footer class="footer">
 			<ul class="footer__list footer__accueil">
 					<!--<a href="" title=""><li class="footer__Elt">Accueil</li></a>-->
 					<li class="footer__elt"><a href="" title="" class=" footer__link fb">Facebook</li></a>
-					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>	
-					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>	
+					<li class="footer__elt"><a href="" title="" class="footer__link insta">Instagram</li></a>
+					<li class="footer__elt"><a href="" title="" class="footer__link yt">Youtube</li></a>
 					<li class="footer__elt"><a href="" title="" class="footer__link twi">Twitter</li></a>
-					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>	
-			</ul>	
+					<li class="footer__elt design"><a href="" title="" class="design__link">Designed by Christine Jend.</li></a>
+			</ul>
 	</footer>
 </body>
 <script type="text/javascript" src="../js/script.js"></script>
